fix card layout so that i t wraps to new line if div exceeds width and adjust margins

--- a/src/client/src/components/SelectOption/styles.module.css
+++ b/src/client/src/components/SelectOption/styles.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .icon {
